2001-09-19  Bruno Haible  <haible@clisp.cons.org>

	* write-po.c (msgdomain_list_print): Treat charset=CHARSET as if it
	were absent, i.e. like ASCII, not like an unknown 8-bit encoding.

2001-09-18  Bruno Haible  <haible@clisp.cons.org>

	* msgl-equal.h: New file.
	* msgl-equal.c: New file.
	* msgmerge.c: Include msgl-equal.h, backupfile.h, copy-file.h.
	(update_mode, version_control_string, backup_suffix_string): New
	variables.
	(long_options): Add --backup, --suffix, --update.
	(main): Accept options --backup, --suffix, -U/--update. If in update
	mode, compare old and new message lists, backup the def.po file, and
	overwrite the def.po file.
	(usage): Document --backup, --suffix, -U/--update.
	(DOT_FREQUENCY): Renamed from DOT_FREQUENCE.
	(merge): Also return def.po message list. Don't share messages between
	def and result; copy instead.
	* Makefile.am (noinst_HEADERS): Add msgl-equal.h.
	(msgmerge_SOURCES): Add msgl-equal.c.

2001-09-19  Bruno Haible  <haible@clisp.cons.org>

	* po-hash-gen.y (number): Change type from 'int' to 'size_t'.
	(filepos): Accept strings without line number.
	(yylex): Change n from 'int' to 'size_t'.
	* po.h (po_method_ty): In field comment_filepos, change line's type
	from 'int' to 'size_t'.
	(po_callback_comment_filepos): Change line's type from 'int' to
	'size_t'.
	* read-po.c (readall_comment_filepos): Likewise.
	* x-po.c (extract_comment_filepos): Likewise.
	* po.c (po_comment_filepos): Likewise.
	(po_callback_comment_filepos): Likewise.
	(po_callback_comment): Reduce the possibility that po_hash succeeds
	if the comment is not a Sun file position comment.

2001-09-16  Bruno Haible  <haible@clisp.cons.org>

	* x-rst.h: New file.
	* x-rst.c: New file.
	* xgettext.c: Include x-rst.h.
	(scan_rst_file): New function.
	(language_to_scanner): Add RST rule.
	(extension_to_language): Add RST rule.
	* write-po.c (message_print): Don't print the line number if it is
	= (size_t)(-1).
	* Makefile.am (noinst_HEADERS): Add x-rst.h.