@@ -1,5 +1,12 @@
 2001-09-19  Bruno Haible  <haible@clisp.cons.org>
 
+	* xgettext.h (omit_header): New declaration.
+	* xgettext.c (omit_header): Make global.
+	* x-po.c (extract_directive_message): Don't throw the header entry
+	away if omit_header is true.
+
+2001-09-19  Bruno Haible  <haible@clisp.cons.org>
+
 	* write-po.c (msgdomain_list_print): Treat charset=CHARSET as if it
 	were absent, i.e. like ASCII, not like an unknown 8-bit encoding.
 
